Fixed overflow bug with secondary header.

--- a/frontend/src/styles/secondaryHeader.scss
+++ b/frontend/src/styles/secondaryHeader.scss
@@ -5,7 +5,7 @@ $secondary-header-height: 10vh;
   background: $primary-color;
   overflow-x: auto;
   overflow-y: hidden;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
